--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -1,86 +1,8 @@
 $PrimaryColor: #448899;
 $SecondaryColor: #666666;
 
-* {
-  box-sizing: border-box;
-  font-family: "Noto Sans TC", sans-serif;
-  margin: 0;
-  padding: 0;
-  h1 {
-    font-size: 28px;
-    font-weight: bold;
-    line-height: 24px;
-  }
-  h2 {
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 34px;
-  }
-  h3.bold {
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 24px;
-  }
-  .body-bold {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 13.3px;
-  }
-  .body-med {
-    font-size: 16px;
-    font-weight: 500px;
-    line-height: 13.3px;
-  }
-  .btn {
-    outline: none;
-    background-color: transparent;
-    border: none;
-    font-size: 16px;
-    line-height: 13.3px;
-    font-weight: 500;
-    &:hover {
-      cursor: pointer;
-    }
-  }
-  input {
-    border: none;
-    outline: medium;
-    padding: 15px;
-  }
-}
-
 body {
-  header {
-    position: sticky;
-    box-shadow: 0 1px 20px 0 $SecondaryColor;
-    top: 0;
-    z-index: 2;
-    background-color: #ffffff;
-    width: 100%;
-    height: 54px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    nav {
-      width: 1200px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      h2 {
-        color: $PrimaryColor;
-      }
-      div.page {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        button.btn {
-          color: $SecondaryColor;
-          padding: 10px;
-        }
-      }
-    }
-  }
-  section.hero {
+  .hero {
     width: 100%;
     height: 320px;
     background-image: url(../images/[orig]\ welcome\ image.png);
@@ -88,60 +10,56 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    div.content_outer_edge {
+    &__content-box {
       width: 1200px;
       height: 169px;
       padding: 10px;
       display: flex;
-      align-items: center;
-      justify-content: center;
-      div.content {
-        width: 100%;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    &__slogan {
+      width: 100%;
+      height: 78px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      h1 {
+        padding: 10px 0px;
+        height: 41px;
+        color: #f8f8f8;
+        text-shadow: 1px 1px 2px #666666;
+      }
+      p {
+        padding: 5px 0px;
+        text-shadow: 1px 1px 2px #666666;
+        color: #f8f8f8;
+      }
+    }
+    &__search {
+      display: flex;
+      width: 100%;
+      height: 46px;
+      input {
+        box-shadow: 0 0 5px 0 $SecondaryColor inset;
+        width: 400px;
         height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        div.slogan {
-          width: 100%;
-          height: 78px;
-
-          display: flex;
-          flex-direction: column;
-          justify-content: space-between;
-          h1 {
-            padding: 10px 0px;
-            height: 41px;
-            color: #f8f8f8;
-            text-shadow: 1px 1px 2px #666666;
-          }
-          p {
-            padding: 5px 0px;
-            text-shadow: 1px 1px 2px #666666;
-            color: #f8f8f8;
-          }
-        }
-        div.search {
-          display: flex;
-          width: 100%;
-          height: 46px;
-          input {
-            box-shadow: 0 0 5px 0 $SecondaryColor inset;
-            width: 400px;
-            height: 100%;
-            border-radius: 5px 0 0 5px;
-            position: relative;
-          }
-          div.btn_background {
+        border-radius: 5px 0 0 5px;
+        position: relative;
+      }
+      button {
+        .btn {
+          &__background {
             width: 60px;
             height: 100%;
             background-color: $PrimaryColor;
             position: relative;
             border-radius: 0 5px 5px 0;
-            .btn {
-              position: absolute;
-              top: 8px;
-              left: 15px;
-            }
+          }
+          &__icon {
+            position: absolute;
+            top: 8px;
+            left: 15px;
           }
         }
       }
@@ -153,14 +71,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    section.list-bar {
+    .mrt-bar {
       padding: 0 0 20px 0;
       max-width: 1200px;
       width: 100%;
       height: 70px;
       display: flex;
       position: relative;
-      div.arrow {
+      &__arrow {
         width: 47px;
         height: 100%;
         display: flex;
@@ -176,14 +94,15 @@ body {
             cursor: pointer;
           }
         }
+        &--left {
+          justify-content: end;
+        }
+        &--right {
+          justify-content: start;
+        }
       }
-      div.arrow-left {
-        justify-content: end;
-      }
-      div.arrow-right {
-        justify-content: start;
-      }
-      div.mrt-container {
+
+      &__container {
         padding: 0px 10px;
         width: 100%;
         display: flex;
@@ -193,10 +112,9 @@ body {
         &::-webkit-scrollbar {
           display: none;
         }
-        div.mrt {
+        .mrt {
           padding: 5px 15px;
           white-space: nowrap;
-
           color: $SecondaryColor;
           &:hover {
             color: black;
@@ -206,67 +124,65 @@ body {
         }
       }
     }
-    section.attraction {
+    .attraction {
       max-width: 1200px;
       width: 100%;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      div.box-outer {
-        height: 272px;
-        display: flex;
-        flex: 1 0 25%;
-        max-width: 25%;
-
-        div.box {
-          width: 100%;
-          margin: 15px;
-          border-radius: 5px;
-          border: 1px solid #e8e8e8;
-          position: relative;
-          z-index: 0;
-          &:hover {
-            transition: 0.2s ease-out;
-            box-shadow: 0 1px 20px 0 $SecondaryColor;
-          }
-          div.img-container {
-            width: 100%;
-            height: 197px;
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              border-radius: 5px 5px 0 0;
-            }
-          }
-
-          div.attraction-name {
-            position: absolute;
-            background-color: #000000;
-            z-index: 1;
-            opacity: 0.6;
-            bottom: 43px;
-            width: 100%;
-            height: 40px;
-            padding: 10px;
-            color: #ffffff;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
-          }
-          div.attraction-info {
-            z-index: 0;
-            width: 100%;
-            height: 45px;
-            position: absolute;
-            bottom: 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 10px;
-            color: $SecondaryColor;
-          }
+      &__box {
+        &--outer {
+          height: 272px;
+          display: flex;
+          flex: 1 0 25%;
+          max-width: 25%;
         }
+        width: 100%;
+        margin: 15px;
+        border-radius: 5px;
+        border: 1px solid #e8e8e8;
+        position: relative;
+        z-index: 0;
+        &:hover {
+          transition: 0.2s ease-out;
+          box-shadow: 0 1px 20px 0 $SecondaryColor;
+        }
+      }
+      &__img {
+        width: 100%;
+        height: 197px;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 5px 5px 0 0;
+        }
+      }
+      &__name {
+        position: absolute;
+        background-color: #000000;
+        z-index: 1;
+        opacity: 0.6;
+        bottom: 43px;
+        width: 100%;
+        height: 40px;
+        padding: 10px;
+        color: #ffffff;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+      &__info {
+        z-index: 0;
+        width: 100%;
+        height: 45px;
+        position: absolute;
+        bottom: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        color: $SecondaryColor;
       }
     }
   }
@@ -281,86 +197,88 @@ body {
       color: #ffffff;
     }
   }
-  div.popup-background {
-    background-color: rgba($color: #000000, $alpha: 0.25);
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    z-index: 3;
-    top: 0;
-    display: flex;
-    justify-content: center;
-    div.popup-block {
+  .popup {
+    &__background {
+      background-color: rgba($color: #000000, $alpha: 0.25);
+      position: fixed;
+      width: 100%;
+      height: 100vh;
+      z-index: 3;
+      top: 0;
+      display: flex;
+      justify-content: center;
+    }
+    &__form-block {
       width: 340px;
       border-radius: 6px;
       background-color: white;
       position: absolute;
       top: 80px;
       color: white;
-
-      div.decorateor-bar {
-        border-radius: 6px 6px 0 0;
-        width: 100%;
-        height: 10px;
-        background: linear-gradient(270deg, #337788, #66aabb);
-      }
-      div.user-content {
-        position: relative;
-        margin: 15px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        h3 {
-          color: $SecondaryColor;
-          margin-bottom: 15px;
-        }
-        input {
+      .form-block {
+        &__decorateor-bar {
+          border-radius: 6px 6px 0 0;
           width: 100%;
-          margin-bottom: 10px;
-          border: 1px solid #cccccc;
-          border-radius: 5px;
-          color: $SecondaryColor;
+          height: 10px;
+          background: linear-gradient(270deg, #337788, #66aabb);
         }
-        button {
-          width: 100%;
-          height: 47px;
-          margin-bottom: 10px;
-          border-radius: 5px;
-          background-color: #448899;
-          color: #ffffff;
-        }
-        p {
-          color: $SecondaryColor;
+        &__content {
+          position: relative;
+          margin: 15px;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          h3 {
+            color: $SecondaryColor;
+            margin-bottom: 15px;
+          }
+          input {
+            width: 100%;
+            margin-bottom: 10px;
+            border: 1px solid #cccccc;
+            border-radius: 5px;
+            color: $SecondaryColor;
+          }
+          button {
+            width: 100%;
+            height: 47px;
+            margin-bottom: 10px;
+            border-radius: 5px;
+            background-color: #448899;
+            color: #ffffff;
+          }
+          p {
+            color: $SecondaryColor;
+          }
         }
       }
     }
-    // .signin {
-    //   display: none;
-    // }
+    display: none;
     // .signup {
     //   display: none;
     // }
-  }
-  div.popup {
-    display: none;
+    // .signin {
+    //   display: none;
+    // }
   }
 }
 @media screen and (max-width: 1199px) {
   body {
-    header {
+    .header {
       padding: 10px 0 10px 10px;
     }
+    .hero {
+      padding: 10px;
+    }
     main {
-      section.attraction {
-        div.box-outer {
+      .attraction {
+        &__box--outer {
           flex: 1 0 50%;
           max-width: 50%;
           height: 375px;
-          div.box {
-            div.img-container {
-              height: 300px;
-            }
-          }
+        }
+        &__img {
+          height: 300px;
         }
       }
     }
@@ -369,29 +287,21 @@ body {
 
 @media screen and (max-width: 600px) {
   body {
-    section.hero {
-      div.content_outer_edge {
-        div.content {
-          div.search {
-            input {
-              width: 225px;
-            }
-          }
-        }
+    .hero__search {
+      input {
+        width: 225px;
       }
     }
     main {
-      section.attraction {
+      .attraction {
         width: 97.77777%;
-        div.box-outer {
+        &__box--outer {
           flex: 1 0 100%;
           max-width: 100%;
           height: 310px;
-          div.box {
-            div.img-container {
-              height: 235px;
-            }
-          }
+        }
+        &__img {
+          height: 235px;
         }
       }
     }
