--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -6,25 +6,149 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    section.booking {
-      border: 2px solid black;
+    .profile {
       margin-top: 40px;
       max-width: 1200px;
+      height: 400px;
       display: flex;
       justify-content: center;
-      div.profile-image {
-        // border: 2px solid blue;
-        width: 600px;
+
+      &__image-box {
+        width: 100%;
+        height: 100%;
+        position: relative;
         padding: 0px 15px;
         img.attraction {
           width: 100%;
+          height: 100%;
+          object-fit: cover;
+          border-radius: 5px;
         }
       }
-      div.profile-content {
-        // border: 2px solid blue;
-        width: 600px;
-        padding: 0px 15px;
+      &__btn {
+        position: absolute;
+        width: 36px;
+        height: 36px;
+        top: 182px;
+        &--left {
+          left: 30px;
+        }
+        &--right {
+          right: 30px;
+        }
       }
+      &__content {
+        width: 100%;
+        padding: 0px 15px;
+        color: $SecondaryColor;
+        h3 {
+          margin-bottom: 15px;
+        }
+        p {
+          margin-bottom: 20px;
+        }
+        &--form {
+          width: 100%;
+          height: 302px;
+          background-color: #e8e8e8;
+          margin-bottom: 8px;
+          border-radius: 5px;
+          padding: 15px 20px;
+          position: relative;
+          .form {
+            &__title {
+              margin-bottom: 15px;
+              height: 22px;
+              display: flex;
+              align-items: center;
+              &--slogan {
+                height: 24px;
+              }
+            }
+
+            &__option {
+              margin-bottom: 15px;
+              display: flex;
+              align-items: center;
+              padding: 0px;
+              &--date {
+                input {
+                  margin-left: 5px;
+                  width: 193px;
+                  height: 35px;
+                  position: relative;
+                  &::-webkit-calendar-picker-indicator {
+                    position: absolute;
+                    left: 159px;
+                    width: 24px;
+                    height: 24px;
+                    background-image: url("../images/calendar.png");
+                    cursor: pointer;
+                  }
+                }
+              }
+              &--time {
+                display: flex;
+                gap: 5px;
+                label {
+                  width: 87px;
+                  display: inline-flex;
+                  gap: 4px;
+                  padding-left: 5px;
+                  align-items: center;
+                  cursor: pointer;
+                  .radio-btn {
+                    width: 22px;
+                    height: 22px;
+                    border-radius: 50%;
+                    background-color: white;
+                    position: relative;
+                  }
+                  input {
+                    display: none;
+                  }
+                  input:checked + .radio-btn::before {
+                    content: "";
+                    position: absolute;
+                    width: 18px;
+                    height: 18px;
+                    top: 2px;
+                    left: 2px;
+                    border-radius: 50%;
+                    background-color: $PrimaryColor;
+                  }
+                }
+              }
+              &--cost {
+                display: flex;
+                gap: 5px;
+              }
+            }
+
+            &__btn {
+              background-color: $PrimaryColor;
+              color: white;
+              position: absolute;
+              top: 225px;
+              left: 20px;
+              padding: 10px 20px;
+              border-radius: 5px;
+            }
+          }
+        }
+      }
+    }
+    .separator {
+      margin-top: 40px;
+      width: 1200px;
+      border-top: 1px solid #e8e8e8;
+    }
+    .info {
+      border: 2px solid black;
+      margin-top: 40px;
+      width: 1200px;
+
+      padding: 10px;
     }
   }
 }
