--- a/static/css/index.css
+++ b/static/css/index.css
@@ -58,6 +58,7 @@ body .hero__search button .btn__icon {
   left: 15px;
 }
 body main {
+  min-height: calc(100vh - 578px);
   width: 100%;
   margin: 50px 0;
   display: flex;
@@ -175,17 +176,6 @@ body main .attraction__info {
   align-items: center;
   padding: 10px;
   color: #666666;
-}
-body footer {
-  width: 100%;
-  height: 104px;
-  background-color: #666666;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-body footer p {
-  color: #ffffff;
 }
 body .popup {
   display: none;
