--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -66,6 +66,7 @@ body {
     }
   }
   main {
+    min-height: calc(100vh - 578px);
     width: 100%;
     margin: 50px 0;
     display: flex;
@@ -186,17 +187,7 @@ body {
       }
     }
   }
-  footer {
-    width: 100%;
-    height: 104px;
-    background-color: $SecondaryColor;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    p {
-      color: #ffffff;
-    }
-  }
+
   .popup {
     &__background {
       background-color: rgba($color: #000000, $alpha: 0.25);
