--- a/static/css/overall.scss
+++ b/static/css/overall.scss
@@ -42,6 +42,12 @@ $SecondaryColor: #666666;
       cursor: pointer;
     }
   }
+  button.regular {
+    font-size: 19px;
+    line-height: 16px;
+    font-weight: 400;
+    align-items: center;
+  }
   input {
     border: none;
     outline: medium;
@@ -78,6 +84,21 @@ body {
     &__btn {
       color: $SecondaryColor;
       padding: 10px;
+    }
+  }
+  main {
+    min-height: calc(100vh - 158px);
+  }
+  footer {
+    width: 100%;
+    height: 104px;
+
+    background-color: $SecondaryColor;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    p {
+      color: #ffffff;
     }
   }
 }
