--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -1,10 +1,12 @@
 body main {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 body main .profile {
   margin-top: 40px;
+  width: 100%;
   max-width: 1200px;
   height: 400px;
   display: flex;
@@ -14,37 +16,83 @@ body main .profile__image-box {
   width: 100%;
   height: 100%;
   position: relative;
-  padding: 0px 15px;
+  display: flex;
+  justify-content: center;
+}
+body main .profile__image-box--outer {
+  width: 100%;
+  max-width: 570px;
+  height: 100%;
+  padding: 0 15px;
 }
 body main .profile__image-box img.attraction {
   width: 100%;
+  max-width: 540px;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px;
+  position: absolute;
+  z-index: 1;
+  transition: opacity 0.3s ease-in-out;
 }
-body main .profile__btn {
+body main .profile__arrow-btn {
   position: absolute;
   width: 36px;
   height: 36px;
   top: 182px;
+  opacity: 0.75;
+  z-index: 3;
 }
-body main .profile__btn--left {
-  left: 30px;
+body main .profile__arrow-btn:hover {
+  transition: 0.3s ease;
+  cursor: pointer;
+  opacity: 1;
 }
-body main .profile__btn--right {
-  right: 30px;
+body main .profile__arrow-btn--left {
+  left: 10px;
+}
+body main .profile__arrow-btn--right {
+  right: 10px;
+}
+body main .profile__imgNo {
+  height: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 10px;
+  z-index: 3;
+}
+body main .profile__imgNo .circle {
+  background-color: white;
+  width: 12px;
+  height: 12px;
+  border: 1px solid white;
+  border-radius: 50%;
+  margin: 0 10px;
+  opacity: 0.7;
+}
+body main .profile__imgNo .circle:hover {
+  cursor: pointer;
+}
+body main .profile__imgNo--input {
+  display: none;
+}
+body main .profile__imgNo--input:checked + .circle {
+  background-color: black;
 }
 body main .profile__content {
   width: 100%;
+  max-width: 630px;
   padding: 0px 15px;
   color: #666666;
 }
 body main .profile__content h3 {
+  height: 33px;
   margin-bottom: 15px;
-}
-body main .profile__content p {
-  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
 }
 body main .profile__content--form {
   width: 100%;
@@ -57,12 +105,11 @@ body main .profile__content--form {
 }
 body main .profile__content--form .form__title {
   margin-bottom: 15px;
-  height: 22px;
-  display: flex;
-  align-items: center;
+  line-height: 22px;
+  height: auto;
 }
 body main .profile__content--form .form__title--slogan {
-  height: 24px;
+  line-height: 24px;
 }
 body main .profile__content--form .form__option {
   margin-bottom: 15px;
@@ -87,6 +134,7 @@ body main .profile__content--form .form__option--date input::-webkit-calendar-pi
 body main .profile__content--form .form__option--time {
   display: flex;
   gap: 5px;
+  line-height: 22px;
 }
 body main .profile__content--form .form__option--time label {
   width: 87px;
@@ -117,26 +165,73 @@ body main .profile__content--form .form__option--time label input:checked + .rad
   background-color: #448899;
 }
 body main .profile__content--form .form__option--cost {
+  line-height: 22px;
+  margin-bottom: 25px;
   display: flex;
   gap: 5px;
 }
 body main .profile__content--form .form__btn {
   background-color: #448899;
   color: white;
-  position: absolute;
-  top: 225px;
-  left: 20px;
   padding: 10px 20px;
   border-radius: 5px;
 }
+body main .profile__content--cat-mrt {
+  height: 22px;
+  margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+}
 body main .separator {
   margin-top: 40px;
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   border-top: 1px solid #e8e8e8;
 }
 body main .info {
-  border: 2px solid black;
-  margin-top: 40px;
-  width: 1200px;
+  margin: 40px 0;
+  width: 100%;
+  max-width: 1200px;
   padding: 10px;
+  color: #666666;
+  line-height: 24px;
+}
+body main .info__title {
+  line-height: 32px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 800px) {
+  body main .profile {
+    margin: 0;
+    padding: 0;
+    height: auto;
+    display: block;
+  }
+  body main .profile__image-box {
+    width: 100%;
+  }
+  body main .profile__image-box--outer {
+    max-width: none;
+    height: 350px;
+    padding: 0;
+  }
+  body main .profile__image-box img.attraction {
+    border-radius: 0;
+    max-width: none;
+  }
+  body main .profile__arrow-btn {
+    top: 157px;
+  }
+  body main .profile__arrow-btn--left {
+    left: 10px;
+  }
+  body main .profile__arrow-btn--right {
+    right: 10px;
+  }
+  body main .profile__content {
+    margin-top: 20px;
+    max-width: none;
+    padding: 0 10px;
+  }
 }/*# sourceMappingURL=attraction.css.map */
