--- a/static/css/index.css
+++ b/static/css/index.css
@@ -122,6 +122,14 @@ body main .attraction {
   flex-wrap: wrap;
   justify-content: center;
 }
+body main .attraction__cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+}
 body main .attraction__box {
   width: 100%;
   margin: 15px;
@@ -139,6 +147,7 @@ body main .attraction__box--outer {
 body main .attraction__box:hover {
   transition: 0.2s ease-out;
   box-shadow: 0 1px 20px 0 #666666;
+  cursor: pointer;
 }
 body main .attraction__img {
   width: 100%;
@@ -235,18 +244,15 @@ body .popup__form-block .form-block__content p {
 }
 
 @media screen and (max-width: 1199px) {
-  body .header {
-    padding: 10px 0 10px 10px;
-  }
-  body .hero {
+  .hero {
     padding: 10px;
   }
-  body main .attraction__box--outer {
+  main .attraction__box--outer {
     flex: 1 0 50%;
     max-width: 50%;
     height: 375px;
   }
-  body main .attraction__img {
+  main .attraction__img {
     height: 300px;
   }
 }
