--- a/static/css/index.scss
+++ b/static/css/index.scss
@@ -131,6 +131,15 @@ body {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      &__cover {
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 2;
+        width: 100%;
+        height: 100%;
+        // border: 2px solid black;
+      }
       &__box {
         &--outer {
           height: 272px;
@@ -144,9 +153,11 @@ body {
         border: 1px solid #e8e8e8;
         position: relative;
         z-index: 0;
+
         &:hover {
           transition: 0.2s ease-out;
           box-shadow: 0 1px 20px 0 $SecondaryColor;
+          cursor: pointer;
         }
       }
       &__img {
@@ -254,23 +265,18 @@ body {
   }
 }
 @media screen and (max-width: 1199px) {
-  body {
-    .header {
-      padding: 10px 0 10px 10px;
-    }
-    .hero {
-      padding: 10px;
-    }
-    main {
-      .attraction {
-        &__box--outer {
-          flex: 1 0 50%;
-          max-width: 50%;
-          height: 375px;
-        }
-        &__img {
-          height: 300px;
-        }
+  .hero {
+    padding: 10px;
+  }
+  main {
+    .attraction {
+      &__box--outer {
+        flex: 1 0 50%;
+        max-width: 50%;
+        height: 375px;
+      }
+      &__img {
+        height: 300px;
       }
     }
   }
