--- a/static/css/overall.css
+++ b/static/css/overall.css
@@ -29,6 +29,10 @@
   font-weight: 500px;
   line-height: 13.3px;
 }
+* .content-reg {
+  font-size: 16px;
+  font-weight: 400;
+}
 * button {
   outline: none;
   background-color: transparent;
@@ -56,7 +60,7 @@ body .header {
   position: sticky;
   box-shadow: 0 1px 20px 0 #666666;
   top: 0;
-  z-index: 2;
+  z-index: 10;
   background-color: #ffffff;
   width: 100%;
   height: 54px;
@@ -72,6 +76,9 @@ body .header__nav {
 }
 body .header__title {
   color: #448899;
+}
+body .header__title:hover {
+  cursor: pointer;
 }
 body .header__page {
   display: flex;
@@ -95,4 +102,10 @@ body footer {
 }
 body footer p {
   color: #ffffff;
+}
+
+@media screen and (max-width: 1200px) {
+  body .header {
+    padding: 10px 0 10px 10px;
+  }
 }/*# sourceMappingURL=overall.css.map */
