--- a/static/css/overall.scss
+++ b/static/css/overall.scss
@@ -31,6 +31,10 @@ $SecondaryColor: #666666;
     font-weight: 500px;
     line-height: 13.3px;
   }
+  .content-reg {
+    font-size: 16px;
+    font-weight: 400;
+  }
   button {
     outline: none;
     background-color: transparent;
@@ -60,7 +64,7 @@ body {
     position: sticky;
     box-shadow: 0 1px 20px 0 $SecondaryColor;
     top: 0;
-    z-index: 2;
+    z-index: 10;
     background-color: #ffffff;
     width: 100%;
     height: 54px;
@@ -75,6 +79,9 @@ body {
     }
     &__title {
       color: $PrimaryColor;
+      &:hover {
+        cursor: pointer;
+      }
     }
     &__page {
       display: flex;
@@ -99,6 +106,14 @@ body {
     justify-content: center;
     p {
       color: #ffffff;
+    }
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  body {
+    .header {
+      padding: 10px 0 10px 10px;
     }
   }
 }
