--- a/static/css/attraction.css
+++ b/static/css/attraction.css
@@ -170,6 +170,23 @@ body main .profile__content--form .form__option--cost {
   display: flex;
   gap: 5px;
 }
+body main .profile__content--form .form__alert {
+  display: flex;
+  align-items: center;
+  display: none;
+  width: 279px;
+  margin: 10px 0px;
+  font-size: 12px;
+  color: black;
+  background-color: #ffbd9b;
+  opacity: 0.9;
+  border-radius: 5px;
+}
+body main .profile__content--form .form__alert img {
+  margin: 0 5px;
+  width: 12px;
+  height: 12px;
+}
 body main .profile__content--form .form__btn {
   background-color: #448899;
   color: white;
