--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -136,6 +136,7 @@ body {
                   }
                 }
               }
+
               &--time {
                 display: flex;
                 gap: 5px;
@@ -175,6 +176,24 @@ body {
                 display: flex;
                 gap: 5px;
               }
+            }
+            &__alert {
+              display: flex;
+              align-items: center;
+              display: none;
+              img {
+                margin: 0 5px;
+                width: 12px;
+                height: 12px;
+                // opacity: 0.8;
+              }
+              width: 279px;
+              margin: 10px 0px;
+              font-size: 12px;
+              color: black;
+              background-color: #ffbd9b;
+              opacity: 0.9;
+              border-radius: 5px;
             }
 
             &__btn {
