--- a/static/css/attraction.scss
+++ b/static/css/attraction.scss
@@ -60,11 +60,18 @@ body {
       &__imgNo {
         height: 12px;
         display: flex;
+        // flex-wrap: wrap;
         align-items: center;
         justify-content: center;
         position: absolute;
         bottom: 10px;
         z-index: 3;
+        overflow-x: hidden;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        &::-webkit-scrollbar {
+          display: none;
+        }
 
         .circle {
           background-color: white;
@@ -99,7 +106,7 @@ body {
 
         &--form {
           width: 100%;
-          height: 302px;
+          height: 300px;
           background-color: #e8e8e8;
           margin-bottom: 8px;
           border-radius: 5px;
@@ -212,14 +219,9 @@ body {
         }
       }
     }
-    .separator {
-      margin-top: 40px;
-      width: 100%;
-      max-width: 1200px;
-      border-top: 1px solid #e8e8e8;
-    }
+
     .info {
-      margin: 40px 0;
+      margin-bottom: 40px;
       width: 100%;
       max-width: 1200px;
       padding: 10px;
