--- a/static/css/overall.css
+++ b/static/css/overall.css
@@ -130,7 +130,7 @@ body .popup__background {
   position: fixed;
   width: 100%;
   height: 100vh;
-  z-index: 3;
+  z-index: 15;
   top: 0;
   display: flex;
   justify-content: center;
@@ -148,6 +148,19 @@ body .popup__form--decorateor-bar {
   width: 100%;
   height: 10px;
   background: linear-gradient(270deg, #337788, #66aabb);
+  position: relative;
+}
+body .popup__form--close {
+  color: black;
+  z-index: 30;
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  top: 20px;
+  right: 10px;
+}
+body .popup__form--close:hover {
+  cursor: pointer;
 }
 body .popup__form--content {
   position: relative;
