--- a/static/css/overall.scss
+++ b/static/css/overall.scss
@@ -132,11 +132,12 @@ body {
       position: fixed;
       width: 100%;
       height: 100vh;
-      z-index: 3;
+      z-index: 15;
       top: 0;
       display: flex;
       justify-content: center;
     }
+
     &__form {
       width: 340px;
       border-radius: 6px;
@@ -150,6 +151,20 @@ body {
         width: 100%;
         height: 10px;
         background: linear-gradient(270deg, #337788, #66aabb);
+        position: relative;
+      }
+      &--close {
+        // border: 2px solid black;
+        color: black;
+        z-index: 30;
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        top: 20px;
+        right: 10px;
+        &:hover {
+          cursor: pointer;
+        }
       }
       &--content {
         position: relative;
