--- a/static/css/booking.css
+++ b/static/css/booking.css
@@ -23,11 +23,11 @@ body main .booking__profile {
   display: flex;
   gap: 30px;
 }
-body main .booking__profile--img {
+body main .booking__profile--img-container {
   width: 250px;
   height: 200px;
 }
-body main .booking__profile--img img {
+body main .booking__profile--img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
