--- a/static/css/booking.scss
+++ b/static/css/booking.scss
@@ -26,15 +26,14 @@ body {
         display: flex;
         gap: 30px;
 
-        &--img {
+        &--img-container {
           width: 250px;
           height: 200px;
-
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-          }
+        }
+        &--img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
         &--infor {
           flex-grow: 1;
