--- a/static/css/overall.scss
+++ b/static/css/overall.scss
@@ -71,6 +71,7 @@ $SecondaryColor: #666666;
 
 body {
   overflow-y: scroll;
+
   .header {
     position: sticky;
     box-shadow: 0 1px 20px 0 $SecondaryColor;
@@ -105,7 +106,7 @@ body {
     }
   }
   main {
-    min-height: calc(100vh - 158px);
+    // min-height: calc(100vh - 158px);
     .separator {
       margin: 40px 0;
       width: 100%;
@@ -115,13 +116,16 @@ body {
   }
   footer {
     width: 100%;
-    height: 104px;
-
+    min-height: 104px;
     background-color: $SecondaryColor;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
     p {
+      position: absolute;
+      top: 40px;
+      line-height: 24px;
       color: #ffffff;
     }
   }
