--- a/static/css/booking.scss
+++ b/static/css/booking.scss
@@ -39,6 +39,7 @@ body {
     flex-direction: column;
     align-items: center;
     padding: 0 10px;
+    visibility: hidden;
     .booking {
       width: 100%;
       max-width: 1000px;
